force-app/main/default/objects/com_smartsheet__Smartsheet__c/com_smartsheet__Smartsheet__c.object-meta.xml
<CustomObject>
    <customHelpPage>com_smartsheet__SmartsheetHelp</customHelpPage>
    <label>Smartsheet Link</label>
    <nameField>
        <label>Smartsheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Smartsheet Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>