force-app/main/default/objects/com_smartsheet__Smartsheet__c/fields/com_smartsheet__Account__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Smartsheets</relationshipName>
    <type>Lookup</type>
</CustomField>