force-app/main/default/objects/com_smartsheet__Smartsheet__c/fields/com_smartsheet__Case__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Smartsheets</relationshipName>
    <type>Lookup</type>
</CustomField>