force-app/main/default/objects/com_smartsheet__Smartsheet__c/fields/com_smartsheet__Contact__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Smartsheets</relationshipName>
    <type>Lookup</type>
</CustomField>