force-app/main/default/objects/com_smartsheet__Smartsheet__c/fields/com_smartsheet__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>com_smartsheet__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Smartsheets</relationshipName>
    <type>Lookup</type>
</CustomField>