force-app/main/default/objects/com_smartsheet__Smartsheet__c/listViews/com_smartsheet__All.listView-meta.xml
<ListView>
    <fullName>com_smartsheet__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>